--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "angular-cli": "1.0.0-beta.28.3",
     "codelyzer": "~2.0.0-beta.1",
     "grunt": "^1.0.1",
+    "grunt-tslint": "^4.0.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
