--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "core-js": "^2.4.1",
+    "ng2-bootstrap": "^1.3.3",
     "rxjs": "^5.0.1",
     "socket.io-client": "^1.7.3",
     "ts-helpers": "^1.1.1",
